crates/qtbridge-gen/src/qt_gen_impl/tests/snapshots/qtbridge_gen__qt_gen_impl__tests__qobject_meta_tests__case_casting.snap
---
source: crates/qtbridge-gen/src/qt_gen_impl/tests/qobject_meta_tests.rs
expression: formatted
---
impl qtbridge::qtbridge_runtime::QMetaInfo for SomeStruct {
    type CppProxy = qtbridge::qtbridge_interfaces::qobject::QObjectProxyCpp;
    fn build_dynamic_meta_type(
        mut meta_obj: std::pin::Pin<&mut qtbridge::qtbridge_runtime::DynamicMetaObjectBuilder>,
    ) {
        meta_obj . as_mut () . register_signal ("this_value_changed" , & [< qtbridge :: qtbridge_type_lib :: QString as qtbridge :: qtbridge_type_lib :: QMetaTypeGet > :: get_qmetatype ()]) ;
        meta_obj.as_mut().register_signal(
            "otherValueChanged",
            &[<f32 as qtbridge::qtbridge_type_lib::QMetaTypeGet>::get_qmetatype()],
        );
        meta_obj . as_mut () . register_signal ("thisStringValueChangedByRef" , & [< qtbridge :: qtbridge_type_lib :: QString as qtbridge :: qtbridge_type_lib :: QMetaTypeGet > :: get_qmetatype ()]) ;
        meta_obj . as_mut () . register_signal ("thatStringValueChangedByValue" , & [< qtbridge :: qtbridge_type_lib :: QString as qtbridge :: qtbridge_type_lib :: QMetaTypeGet > :: get_qmetatype ()]) ;
        meta_obj . as_mut () . register_slot ("onThatValueChanged" , 1u32 , & [< qtbridge :: qtbridge_type_lib :: QString as qtbridge :: qtbridge_type_lib :: QMetaTypeGet > :: get_qmetatype ()] , & qtbridge :: qtbridge_type_lib :: QMetaType :: default () , qtbridge :: qtbridge_runtime :: dynamicmetaobjectbuilder :: Mutability :: Mutable) ;
        meta_obj . as_mut () . register_property ("this_value" , 1u32 , & (< qtbridge :: qtbridge_type_lib :: QString as qtbridge :: qtbridge_type_lib :: QMetaTypeGet > :: get_qmetatype ()) , false , "this_value_changed") ;
        meta_obj
            .as_mut()
            .add_class_info("DefaultProperty", "this_value");
        meta_obj.as_mut().register_property(
            "otherValue",
            2u32,
            &(qtbridge::qtbridge_runtime::get_meta_type_of_fn_return_value(|this: &Self| {
                &this.otherValueVar
            })),
            false,
            "otherValueChanged",
        );
        meta_obj.as_mut().add_class_info("Author", "The Qt Company");
        meta_obj.as_mut().end_meta_registration();
    }
    fn get_shared_dynamic_meta_object_data(
    ) -> &'static qtbridge::qtbridge_runtime::DynamicMetaObjectData {
        use std::sync::OnceLock;
        thread_local! { static DYNAMIC_META_OBJECT : OnceLock < & 'static qtbridge :: qtbridge_runtime :: DynamicMetaObjectData > = OnceLock :: new () ; }
        DYNAMIC_META_OBJECT.with(|cell| {
            *cell.get_or_init(|| {
                let ptr = Self::create_dynamic_meta_object_data_for_type();
                unsafe { ptr.as_ref() }.unwrap()
            })
        })
    }
}
