crates/qtbridge-gen/src/qt_gen_impl/tests/snapshots/qtbridge_gen__qt_gen_impl__tests__qobject_meta_tests__test.snap
---
source: crates/qtbridge-gen/src/qt_gen_impl/tests/qobject_meta_tests.rs
expression: formatted
---
impl qtbridge::qtbridge_runtime::QMetaInfo for SomeStruct {
    fn register_meta(
        mut meta_obj: std::pin::Pin<&mut qtbridge::qtbridge_runtime::DynamicMetaObjectBuilder>,
    ) {
        use qtbridge::qtbridge_runtime::metacallbacks::{
            property_read_callback_for, property_write_callback_for, slot_callback_for,
        };
        use qtbridge::qtbridge_type_lib;
        use qtbridge_type_lib::{QMetaType, QMetaTypeGet};
        use qtbridge::qtbridge_runtime::get_meta_type_of_fn_return_value;
        meta_obj.as_mut().register_signal(
            "thisValueChanged",
            &[qtbridge_type_lib::QString::get_qmetatype()],
        );
        meta_obj
            .as_mut()
            .register_signal("otherValueChanged", &[f32::get_qmetatype()]);
        meta_obj.as_mut().register_signal(
            "thisStringValueChangedByRef",
            &[qtbridge_type_lib::QString::get_qmetatype()],
        );
        meta_obj.as_mut().register_signal(
            "thatStringValueChangedByValue",
            &[qtbridge_type_lib::QString::get_qmetatype()],
        );
        meta_obj.as_mut().register_slot(
            "onThatValueChanged",
            1u32,
            &[qtbridge_type_lib::QString::get_qmetatype()],
            &QMetaType::default(),
            slot_callback_for::<SomeStruct>(|this, inputs, _outputs| {
                let arg_0_ref =
                    unsafe { inputs[0usize].cast::<qtbridge_type_lib::QString>().as_ref() }
                        .expect("Argument reference is null");
                let arg_0_var: <String as ToOwned>::Owned = arg_0_ref.into();
                this.on_that_value_changed(&arg_0_var)
            }),
        );
        meta_obj.as_mut().register_property(
            "this_value",
            1u32,
            &qtbridge_type_lib::QString::get_qmetatype(),
            property_read_callback_for::<SomeStruct>(|this| this.get_value().into()),
            property_write_callback_for::<SomeStruct>(|this, value| {
                let Ok(value) = TryInto::<<String as ToOwned>::Owned>::try_into(value) else {
                    panic!(
                        "Failed to convert value '{}' to type '{}' in qproperty '{}'",
                        value.to_string(),
                        "String",
                        "this_value"
                    );
                };
                this.set_value(&value);
            }),
            "thisValueChanged",
        );
        meta_obj
            .as_mut()
            .add_class_info("DefaultProperty", "this_value");
        meta_obj.as_mut().register_property(
            "otherValue",
            2u32,
            &get_meta_type_of_fn_return_value(|this: &Self| &this.otherValueVar),
            property_read_callback_for::<SomeStruct>(|this| (&this.otherValueVar).into()),
            property_write_callback_for::<SomeStruct>(|this, value| {
                let Ok(value) = value.try_into() else {
                    panic!(
                        "Failed to convert value '{}' to type '{}' in qproperty '{}'",
                        value.to_string(),
                        std::any::type_name_of_val(&this.otherValueVar),
                        "otherValue"
                    );
                };
                if this.otherValueVar != value {
                    this.otherValueVar = value;
                    this.other_value_changed(this.otherValueVar.clone());
                }
            }),
            "otherValueChanged",
        );
        meta_obj.as_mut().add_class_info("Author", "The Qt Company");
        meta_obj.as_mut().end_meta_registration();
    }
    fn get_static_meta_object() -> &'static qtbridge::qtbridge_type_lib::QMetaObject {
        <Self as qtbridge::qtbridge_runtime::QObjectHolder>::get_static_meta_object()
    }
    fn get_shared_dynamic_meta_object(
    ) -> &'static qtbridge::qtbridge_runtime::DynamicMetaObjectBuilder {
        use std::sync::OnceLock;
        thread_local! { static DYNAMIC_META_OBJECT : OnceLock < & 'static qtbridge :: qtbridge_runtime :: DynamicMetaObjectBuilder > = OnceLock :: new () ; }
        DYNAMIC_META_OBJECT.with(|cell| {
            *cell.get_or_init(|| {
                let ptr = Self::create_dynamic_meta_object_builder_for_type();
                unsafe { ptr.as_ref() }.unwrap()
            })
        })
    }
}
